--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,12 +47,21 @@
         {% include links.html %}
 
         <iframe 
-        src="https://player.kick.com/hashkush" 
+        src="https://player.kick.com/juchejulia" 
         height="400" 
         width="100%"
         frameborder="0" 
         scrolling="no" 
         allowfullscreen="true"> 
+        </iframe>
+
+        <iframe
+        src="https://player.twitch.tv/?channel=juchejulia&parent=streetcatlove.github.io"
+        frameborder="0"
+        scrolling="no"
+        allowfullscreen="true"
+        height=400
+        width="100%">
         </iframe>
 
         {% include footer.html %}
